helm/kube-prometheus-stack/test/monitor-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: prometheus
spec:
  tls:
  - hosts:
    - testlab-monitoring.test-datalabs.nerc.ac.uk
  rules:
  - host: testlab-monitoring.test-datalabs.nerc.ac.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-stack-grafana
          servicePort: 80
